# Praktika1

Praktika-1/: .gitignore  CMakeLists.txt
Praktika-1/app/: CMakeLists.txt
Praktika-1/app/src/: main.c
Praktika-1/lib/: CMakeLists.txt
Praktika-1/lib/include/: lib_main.h
Praktika-1/lib/src/: lib_main.c
Praktika-1/tests/: CMakeLists.txt
Praktika-1/tests/test_buffer/: test_buffer.c
Praktika-1/tests/test_replace/: test_replace.c
